<resources>
    <string name="app_name">Second_supp_task</string>
    <string name="upload">Upload</string>
    <string name="discard">Discard</string>
    <string name="setting">Setting</string>
    <string name="camira">Camira</string>
    <string name="singapore">Singapore</string>
    <string name="your_camira">ur camira kind</string>
    <string name="ursetting">ur camira setting</string>
</resources>